fix: fix supoort for external secrets (optional)

--- a/helm/superset/templates/secret-db-env.yaml
+++ b/helm/superset/templates/secret-db-env.yaml
@@ -25,12 +25,24 @@ metadata:
     {{- include "okdp.superset.labels" . | nindent 4 }}
 type: Opaque
 stringData:
-  DB_HOST: {{ tpl .Values.superset.supersetNode.connections.db_host . | quote }}
-  DB_PORT: {{ .Values.superset.supersetNode.connections.db_port | quote }}
-  DB_USER: {{ .Values.superset.supersetNode.connections.db_user | quote }}
-  DB_PASS: {{ .Values.superset.supersetNode.connections.db_pass | quote }}
-  DB_NAME: {{ .Values.superset.supersetNode.connections.db_name | quote }}
-  
+  {{- with .Values.superset.supersetNode.connections }}
+  {{- if .db_host }}
+  DB_HOST: {{ tpl .db_host $ | quote }}
+  {{- end }}
+  {{- if .db_port }}
+  DB_PORT: {{ .db_port | quote }}
+  {{- end }}
+  {{- if .db_user }}
+  DB_USER: {{ .db_user | quote }}
+  {{- end }}
+  {{- if .db_pass }}
+  DB_PASS: {{ .db_pass | quote }}
+  {{- end }}
+  {{- if .db_name }}
+  DB_NAME: {{ .db_name | quote }}
+  {{- end }}
+  {{- end }}
+
   # Bitnami postresql credentials
   {{- if .Values.superset.postgresql.enabled }}
   password: {{ .Values.superset.supersetNode.connections.db_pass | quote }}
