--- a/helm/superset/templates/secret-oauth2-env.yaml
+++ b/helm/superset/templates/secret-oauth2-env.yaml
@@ -27,12 +27,26 @@ type: Opaque
 stringData:
   AUTH_OAUTH_ENABLED: {{ .Values.okdp.oauth.enabled | quote }}
   {{ if .Values.okdp.oauth.enabled }}
-  AUTH_OAUTH_BASE_URL: {{ .Values.okdp.oauth.base_url | quote }}
-  AUTH_OAUTH_CLIENT_ID: {{ .Values.okdp.oauth.client_id | quote }}
-  AUTH_OAUTH_CLIENT_SECRET: {{ .Values.okdp.oauth.client_secret | quote }}
-  AUTH_OAUTH_PROVIDER: {{ .Values.okdp.oauth.provider | quote }}
-  AUTH_OAUTH_SCOPE: {{ .Values.okdp.oauth.scope | quote }}
-  AUTH_OAUTH_SSL_CERTIFICATE_VERIFY: {{ .Values.okdp.oauth.ssl_certificate_verify | quote }}
+  {{- with .Values.okdp.oauth }}
+  {{- if .base_url }}
+  AUTH_OAUTH_BASE_URL: {{ .base_url | quote }}
+  {{- end }}
+  {{- if .client_id }}
+  AUTH_OAUTH_CLIENT_ID: {{ .client_id | quote }}
+  {{- end }}
+  {{- if .client_secret }}
+  AUTH_OAUTH_CLIENT_SECRET: {{ .client_secret | quote }}
+  {{- end }}
+  {{- if .provider }}
+  AUTH_OAUTH_PROVIDER: {{ .provider | quote }}
+  {{- end }}
+  {{- if .scope }}
+  AUTH_OAUTH_SCOPE: {{ .scope | quote }}
+  {{- end }}
+  {{- if hasKey . "ssl_certificate_verify" }}
+  AUTH_OAUTH_SSL_CERTIFICATE_VERIFY: {{ .ssl_certificate_verify | quote }}
+  {{- end }}
+  {{- end }}
   {{- if .Values.okdp.oauth.use_pkce }}
   AUTH_OAUTH_USE_PKCE: "S256"
   {{ else }}
