--- a/helm/superset/templates/secret-superset-env.yaml
+++ b/helm/superset/templates/secret-superset-env.yaml
@@ -25,8 +25,17 @@ metadata:
     {{- include "okdp.superset.labels" . | nindent 4 }}
 type: Opaque
 stringData:
-  SUPERSET_SECRET_KEY: {{ .Values.okdp.superset.superset_secret_key }}
-  SUPERSET_LOAD_EXAMPLES: {{ .Values.okdp.superset.load_examples.enabled | default false | quote }}
+  {{- with .Values.okdp.superset }}
+  {{- if .superset_secret_key }}
+  SUPERSET_SECRET_KEY: {{ .superset_secret_key | quote }}
+  {{- end }}
+
+  {{- if hasKey . "load_examples" }}
+  SUPERSET_LOAD_EXAMPLES: {{ .load_examples.enabled | default false | quote }}
+  {{- else }}
+  SUPERSET_LOAD_EXAMPLES: "false"
+  {{- end }}
+  {{- end }}
   {{ if .Values.okdp.superset.load_examples.jdbc_uri }}
   SQLALCHEMY_EXAMPLES_URI: {{ tpl .Values.okdp.superset.load_examples.jdbc_uri . | quote }}
   {{ end }}
