--- a/helm/superset/templates/secret-redis-env.yaml
+++ b/helm/superset/templates/secret-redis-env.yaml
@@ -25,13 +25,29 @@ metadata:
     {{- include "okdp.superset.labels" . | nindent 4 }}
 type: Opaque
 stringData:
-  REDIS_HOST: {{ tpl .Values.superset.supersetNode.connections.redis_host . | quote }}
-  REDIS_USER: {{ .Values.superset.supersetNode.connections.redis_user | quote }}
-  REDIS_PASSWORD: {{ .Values.superset.supersetNode.connections.redis_password | quote }}
-  REDIS_PORT: {{ .Values.superset.supersetNode.connections.redis_port | quote }}
-  REDIS_PROTO: {{ if .Values.superset.supersetNode.connections.redis_ssl.enabled }}"rediss"{{ else }}"redis"{{ end }}
-  REDIS_DB: {{ .Values.superset.supersetNode.connections.redis_cache_db | quote }}
-  REDIS_CELERY_DB: {{ .Values.superset.supersetNode.connections.redis_celery_db | quote }}
+  {{- with .Values.superset.supersetNode.connections }}
+  {{- if .redis_host }}
+  REDIS_HOST: {{ tpl .redis_host $ | quote }}
+  {{- end }}
+  {{- if .redis_user }}
+  REDIS_USER: {{ .redis_user | quote }}
+  {{- end }}
+  {{- if .redis_password }}
+  REDIS_PASSWORD: {{ .redis_password | quote }}
+  {{- end }}
+  {{- if .redis_port }}
+  REDIS_PORT: {{ .redis_port | quote }}
+  {{- end }}
+  {{- if hasKey . "redis_ssl" }}
+  REDIS_PROTO: {{ if .redis_ssl.enabled }}"rediss"{{ else }}"redis"{{ end }}
+  {{- end }}
+  {{- if .redis_cache_db }}
+  REDIS_DB: {{ .redis_cache_db | quote }}
+  {{- end }}
+  {{- if .redis_celery_db }}
+  REDIS_CELERY_DB: {{ .redis_celery_db | quote }}
+  {{- end }}
+  {{- end }}
   {{- if .Values.superset.supersetNode.connections.redis_ssl.enabled }}
   REDIS_SSL_CERT_REQS: {{ .Values.superset.supersetNode.connections.redis_ssl.ssl_cert_reqs | default "CERT_NONE" | quote }}
   {{- end }}
